# ChangeLog for dev-embedded/u-boot-tools
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-embedded/u-boot-tools/ChangeLog,v 1.9 2009/07/19 18:40:59 vapier Exp $

*u-boot-tools-2009.06 (19 Jul 2009)

  19 Jul 2009; Mike Frysinger <vapier@gentoo.org>
  +u-boot-tools-2009.06.ebuild:
  Version bump.

  07 May 2009; Raúl Porcel <armin76@gentoo.org>
  u-boot-tools-2009.03.ebuild:
  amd64/arm/x86 stable

*u-boot-tools-2009.03 (29 Mar 2009)

  29 Mar 2009; Raúl Porcel <armin76@gentoo.org>
  +u-boot-tools-2009.03.ebuild:
  Version bump

*u-boot-tools-2009.01 (16 Mar 2009)

  16 Mar 2009; Raúl Porcel <armin76@gentoo.org>
  +u-boot-tools-2009.01.ebuild:
  Version bump wrt #258414

  25 Nov 2008; Raúl Porcel <armin76@gentoo.org>
  u-boot-tools-2008.10.ebuild:
  arm stable

  26 Oct 2008; Markus Meier <maekke@gentoo.org> u-boot-tools-1.3.1.ebuild:
  amd64/x86 stable, bug #242518

*u-boot-tools-2008.10 (26 Oct 2008)

  26 Oct 2008; Mike Frysinger <vapier@gentoo.org>
  +u-boot-tools-2008.10.ebuild:
  Version bump.

  12 May 2008; <solar@gentoo.org> u-boot-tools-1.3.1.ebuild:
  - keyworded ~arm per request. Builds native but fails at cross-compiles.
  TODO: Fix CROSS_COMPILE= logic to allow the variable to be passed so it gets
  the right CTARGET-CC

*u-boot-tools-1.3.1 (24 Dec 2007)

  24 Dec 2007; Mike Frysinger <vapier@gentoo.org> +u-boot-tools-1.3.1.ebuild:
  Initial import.  Ebuild by me.