@@ -1,6 +1,12 @@
 # ChangeLog for dev-embedded/u-boot-tools
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-embedded/u-boot-tools/ChangeLog,v 1.9 2009/07/19 18:40:59 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-embedded/u-boot-tools/ChangeLog,v 1.10 2009/08/26 15:25:26 armin76 Exp $
+
+*u-boot-tools-2009.08_rc3 (26 Aug 2009)
+
+  26 Aug 2009; Raúl Porcel <armin76@gentoo.org>
+  +u-boot-tools-2009.08_rc3.ebuild:
+  Version bump
 
 *u-boot-tools-2009.06 (19 Jul 2009)
 
